--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "rxjs": "^6.6.3",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
